--- a/auxiliar/biblio/biblio.bib
+++ b/auxiliar/biblio/biblio.bib
@@ -33,7 +33,7 @@ note={https://bi.snu.ac.kr/~scai/Info/AI/Fusion,%20Propagation,%20and%20Structur
   author={McElreath, Richard},
   year={2020},
   publisher={CRC press},
-  note={https://github.com/glandfried/biblio/releases/download/teca/mcelreath2020}
+  note={https://github.com/glandfried/biblio/releases/download/teca/mcelreath2020-notas.pdf}
 }
 
 
